--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to Git One</h1>
     <p>Your journey to mastering Git starts here.</p>
+    <h1>New things</h1>
 </body>
 </html>
