--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Welcome to Git One</h1>
     <p>Your journey to mastering Git starts here.</p>
     <h1>New things</h1>
+    <h2>Welcome to H2 tage</h2>
 </body>
 </html>
